Sync Networked Entities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ renet_visualizer = {version = "*", features = ["bevy"]}
 smooth-bevy-cameras = "0.8.0"
 fastrand = "1.9.0"
 solana-client = "1.7.17"
+bevy_flycam = "0.10.1"
